--- a/index.html
+++ b/index.html
@@ -310,6 +310,31 @@
             animation: float 3s ease-in-out infinite;
         }
 
+        .footer {
+            position: fixed;
+            bottom: 20px;
+            left: 20px;
+            background: rgba(255, 255, 255, 0.95);
+            padding: 10px 20px;
+            border-radius: 25px;
+            backdrop-filter: blur(10px);
+            box-shadow: 0 5px 15px rgba(0,0,0,0.1);
+            border: 1px solid rgba(0,0,0,0.1);
+            z-index: 999;
+        }
+
+        .footer p {
+            margin: 0;
+            font-size: 12px;
+            color: #666;
+            font-weight: 500;
+        }
+
+        .footer .developer {
+            color: #667eea;
+            font-weight: 600;
+        }
+
         @keyframes float {
             0%, 100% { transform: translateY(0px); }
             50% { transform: translateY(-10px); }
@@ -464,6 +489,12 @@
         <a href="https://www.paypal.com/donate?business=santivadala.dev%40gmail.com&no_recurring=0&currency_code=EUR" target="_blank" class="paypal-btn">
             ❤️ Supporta il progetto
         </a>
+    </div>
+
+    <!-- Footer sviluppatore -->
+    <div class="footer">
+        <p>Sviluppato da <span class="developer">Santi Vadalà</span></p>
+        <!-- <p style="font-size: 10px; margin-top: 2px;">P.IVA: 12345678901</p> -->
     </div>
 
     <script>
